<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>snmp-obj</groupId>
		<artifactId>snmp-obj</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../snmp-obj</relativePath>
	</parent>
	<artifactId>snmp-obj-snmp4j</artifactId>
	<name>SNMP Objects SNMP4J integration</name>

	<dependencies>
		<dependency>
			<groupId>snmp-obj</groupId>
			<artifactId>snmp-obj-core</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.snmp4j</groupId>
			<artifactId>snmp4j</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.snmp4j</groupId>
			<artifactId>snmp4j-agent</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>snmp-obj</groupId>
			<artifactId>snmp-obj-mib-std</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>snmp-obj</groupId>
			<artifactId>snmp-obj-test</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>

        <!-- junit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>
        
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<scope>runtime</scope>
			<exclusions>
				<exclusion>
					<groupId>javax.mail</groupId>
					<artifactId>mail</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

	</dependencies>

	
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <version>2.22.2</version>
			  
			  <configuration>
			    <forkCount>1</forkCount>
			    <reuseForks>true</reuseForks>
			    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
			  </configuration>
			</plugin>
		</plugins>
		
	</build>
</project>